--- a/config/apps.json
+++ b/config/apps.json
@@ -1,11 +1,20 @@
 [{
+    "name" : "FIL - eCommerce App",
+    "description" : "Android application for a apparel store with shopping cart, checkout and all other eCommerce features.",
+    "language": "Android",
+    "html_url" : "https://github.com/Nuwan94/FIL",
+    "created_at":"2019/03/01"
+},
+{
     "name" : "Vidya 2017",
     "description" : "Android application will help you to find the stalls and their details, event timetable in the Vidya 2017 Sciecne Exhibition organized by Faculty of Science, University of Kelaniya.",
     "language": "Android",
-    "link" : "https://play.google.com/store/apps/details?id=uok.sesa.vidya&hl=en_US"
+    "link" : "https://play.google.com/store/apps/details?id=uok.sesa.vidya&hl=en_US",
+    "created_at":"2017/08/01"
 },{
     "name" : "SE Official",
-    "html_url":"https://github.com/Nuwan94/SEApp",
-    "description" : "Software Engineering 2015/16 Batch Android Application",
-    "language": "Android"
+    "html_url":"https://github.com/Nuwan94/se-app",
+    "description" : "Software Engineering 2015/16 Batch Android Application, Features for sharing notes, find details about the students and view updated time table.",
+    "language": "Android",
+    "created_at":"2018/11/01"
 }]
