--- a/config/apps.json
+++ b/config/apps.json
@@ -2,7 +2,7 @@
     "name" : "FIL - eCommerce App",
     "description" : "Android application for a apparel store with shopping cart, checkout and all other eCommerce features.",
     "language": "Android",
-    "html_url" : "https://github.com/Nuwan94/FIL",
+    "html_url" : "https://github.com/nuwan94/FIL",
     "created_at":"2019/03/01"
 },
 {
@@ -13,7 +13,7 @@
     "created_at":"2017/08/01"
 },{
     "name" : "SE Official",
-    "html_url":"https://github.com/Nuwan94/se-app",
+    "html_url":"https://github.com/nuwan94/se-app",
     "description" : "Software Engineering 2015/16 Batch Android Application, Features for sharing notes, find details about the students and view updated time table.",
     "language": "Android",
     "created_at":"2018/11/01"
