--- a/config/apps.json
+++ b/config/apps.json
@@ -1,6 +1,6 @@
 [{
     "name" : "FIL - eCommerce App",
-    "description" : "Android application for a apparel store with shopping cart, checkout and all other eCommerce features.",
+    "description" : "Android application for an apparel store with shopping cart, checkout and all other eCommerce features.",
     "language": "Android",
     "html_url" : "https://github.com/nuwan94/FIL",
     "created_at":"2019/03/01"
