--- a/config/apps.json
+++ b/config/apps.json
@@ -1,5 +1,5 @@
 [{
-    "name" : "FIL - eCommerce App",
+    "name" : "eCommerce App",
     "description" : "Android application for an apparel store with shopping cart, checkout and all other eCommerce features.",
     "language": "Android",
     "html_url" : "https://github.com/nuwan94/FIL",
